# demo-server

./: .gitignore  README.md
base/: thread_pool.cpp  thread_task.cpp
base/include/: thread_task.h
client/: CMakeLists.txt  main.cpp
demos/demo0/: note.md  test
demos/demo0/client/: CMakeLists.txt  client  main.c
demos/demo0/server/: main.c  server
demos/demo1/: note.md  runclient.sh
demos/demo1/base/: CMakeLists.txt  thread_pool.cpp  thread_task.cpp
demos/demo1/base/include/: thread_pool.h  thread_task.h
demos/demo1/base/test/: thread_pool_test.cpp
demos/demo1/server/: CMakeLists.txt  a.out  main.c  main.cpp  server.c  server.h  thread.h  thread_pool.cpp  thread_pool.h
demos/demo1/server/include/: server.h
demos/demo1/src/: demo1.cpp
demos/demo2/: runserver.sh
demos/demo2/client/: main.c
demos/demo2/server/: CMakeLists.txt
demos/demo2/server/include/: daemon.h  daemon.hpp  epoll.h  epoll.hpp  type.hpp
demos/demo2/server/src/: daemon.cpp  epoll.cpp
demos/demo3/client/: client  main.c
demos/demo3/server/: main.c  server
server/: CMakeLists.txt  log.h  main.cpp  noncopyable.hpp  nonmoveable.h  server.cpp  server.h  sock.cpp  sock.h  task.cpp  task.h  thread_pool.cpp  thread_pool.h  thread_task.cpp
